--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -7,3 +7,4 @@ no_permission: "&cYou don't have permission to do that."
 plugin_reloaded: "&aPlugin reloaded successfully."
 plugin_toggled_on: "&aMending repair is now enabled for you."
 plugin_toggled_off: "&cMending repair is now disabled for you."
+command_usage: "&7Usage: /bm <reload|toggle>"
